--- a/src/components/Pagination.css
+++ b/src/components/Pagination.css
@@ -5,7 +5,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-left: 100px;
+  /* margin-left: 70px; */
   /* gap: 8px; */
 }
 
